tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateVersion__c/InterviewTemplateVersion__c.object-meta.xml
<CustomObject>
    <label>InterviewTemplateVersion</label>
    <nameField>
        <label>InterviewTemplateVersion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InterviewTemplateVersions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>