tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateVersion__c/fields/InterviewTemplate__c.field-meta.xml
<CustomField>
    <fullName>InterviewTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InterviewTemplate</label>
    <referenceTo>InterviewTemplate__c</referenceTo>
    <relationshipLabel>InterviewTemplateVersions</relationshipLabel>
    <relationshipName>InterviewTemplateVersions</relationshipName>
    <type>Lookup</type>
</CustomField>