tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateVersion__c/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <label>Variant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>